# pgmtwin

./: .buildinfo  .gitignore  LICENSE  README.md  env_pgmtwin.yml  genindex.html  index.html  modules.html  objects.inv  pgmtwin.core.asset_components.html  pgmtwin.core.distributions.html  pgmtwin.core.html  pgmtwin.html  pgmtwin.toolkits.html  pgmtwin.toolkits.shm.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree  pgmtwin.core.asset_components.doctree  pgmtwin.core.distributions.doctree  pgmtwin.core.doctree  pgmtwin.doctree  pgmtwin.toolkits.doctree  pgmtwin.toolkits.shm.doctree
.github/workflows/: python-package.yml  sphinx-gh-pages.yml
_sources/: index.rst.txt  modules.rst.txt  pgmtwin.core.rst.txt  pgmtwin.rst.txt
_static/: bizstyle.js
docs/source/: conf.py  pgmtwin.core.asset_components.rst  pgmtwin.core.distributions.rst  pgmtwin.rst  pgmtwin.toolkits.rst  pgmtwin.toolkits.shm.rst
examples/basic_cantilever_static/: common.py  do_evolution.py  do_inverse_problem.py  do_inverse_problem_cpd.py  do_policy.py  do_policy_eval.py  do_roms.py  do_roms_sensors.py  do_sample_params.py  do_simulation.py  do_simulation_hifi.py  do_snapshots_hifi.py  do_snapshots_roms.py  oneshot.sh
examples/robot_pathing/: common.py  do_simulation.py  oneshot.sh  pgm_env.py
pgmtwin/: __init__.py
pgmtwin/core/: action.py  dependency.py  (+8 more)
readme/: digital_twin.graphml  pgmtwin_schema.graphml
tutorials/: 01_a_simple_digital_twin.ipynb  02_pgm_for_digital_twins.ipynb  03_assimilation_comparison.ipynb
(+16 files in other folders)
